extends CanvasLayer

## è”ç½‘æ¨¡å¼æ¸¸æˆå†…HUDç•Œé¢
## è´Ÿè´£æ˜¾ç¤ºæ‰€æœ‰ç©å®¶çš„çŠ¶æ€ä¿¡æ¯

# UIç»„ä»¶å¼•ç”¨
@onready var players_container: VBoxContainer = $PlayersPanel/MarginContainer/VBoxContainer/PlayersContainer
@onready var server_info_label: Label = $ServerInfoLabel

# ç©å®¶ä¿¡æ¯é¡¹åœºæ™¯ï¼ˆåŠ¨æ€åˆ›å»ºï¼‰
var player_info_items: Dictionary = {}  # peer_id -> Control

# è°ƒè¯•ç”¨åå­—åˆ—è¡¨
var _debug_label: Label = null

# è§’è‰²æç¤ºé¢æ¿
var _role_hint_panel: PanelContainer = null

# Impostor å›å˜æç¤ºæ¡†ï¼ˆå±å¹•ä¸‹æ–¹ï¼‰
var _betrayal_hint_panel: PanelContainer = null

# æ›´æ–°é—´éš”
var _update_timer: float = 0.0
const UPDATE_INTERVAL: float = 0.1  # æ¯0.1ç§’æ›´æ–°ä¸€æ¬¡

# åˆå§‹åŒ–å®Œæˆæ ‡å¿—
var _initialized: bool = false

func _ready() -> void:
	# åˆ›å»ºè°ƒè¯•æ ‡ç­¾
	_create_debug_label()
	
	# åˆ›å»ºè§’è‰²æç¤ºé¢æ¿
	_create_role_hint_panel()
	
	# åˆ›å»ºå›å˜æç¤ºæ¡†
	_create_betrayal_hint_panel()
	
	# è¿æ¥å›å˜ä¿¡å·
	NetworkPlayerManager.impostor_betrayal_triggered.connect(_on_impostor_betrayed)
	
	# å»¶è¿Ÿåˆå§‹åŒ–ï¼Œç­‰å¾…ç©å®¶åŠ è½½
	await get_tree().create_timer(0.5).timeout
	_init_player_list()
	
	# æ˜¾ç¤ºæœåŠ¡å™¨ä¿¡æ¯
	_update_server_info()
	
	# æ›´æ–°è§’è‰²æç¤º
	_update_role_hint()
	
	# æ›´æ–°å›å˜æç¤º
	_update_betrayal_hint()
	
	_initialized = true


func _process(delta: float) -> void:
	if not _initialized:
		return
	
	_update_timer += delta
	if _update_timer >= UPDATE_INTERVAL:
		_update_timer = 0.0
		_update_all_players()
		_update_role_hint()  # å®šæœŸæ›´æ–°è§’è‰²æç¤º
		_update_betrayal_hint()  # å®šæœŸæ›´æ–°å›å˜æç¤º


## åˆå§‹åŒ–ç©å®¶åˆ—è¡¨
func _init_player_list() -> void:
	# æ¸…ç©ºç°æœ‰åˆ—è¡¨
	_clear_player_list()
	
	var local_peer_id = NetworkManager.get_peer_id()
	print("[GameUIOnline] åˆå§‹åŒ–ç©å®¶åˆ—è¡¨, local_peer_id=%d, players=%s" % [local_peer_id, str(NetworkPlayerManager.players.keys())])
	
	# ä¸ºæ¯ä¸ªç©å®¶åˆ›å»ºä¿¡æ¯é¡¹
	for peer_id in NetworkPlayerManager.players.keys():
		# è·³è¿‡æœåŠ¡å™¨è‡ªèº«ï¼ˆpeer_id=1ï¼‰å’Œæ— æ•ˆçš„ peer_id
		if peer_id <= 1:
			print("[GameUIOnline] è·³è¿‡æ— æ•ˆ peer_id: %d" % peer_id)
			continue
		var player = NetworkPlayerManager.players[peer_id]
		if player and is_instance_valid(player):
			_add_player_info(peer_id, player)


## æ¸…ç©ºç©å®¶åˆ—è¡¨
func _clear_player_list() -> void:
	# æ¸…ç©ºå­—å…¸ä¸­çš„å¼•ç”¨
	for peer_id in player_info_items.keys():
		var item = player_info_items[peer_id]
		if item and is_instance_valid(item):
			item.queue_free()
	player_info_items.clear()
	
	# åŒæ—¶æ¸…ç†å®¹å™¨ä¸­çš„æ‰€æœ‰å­èŠ‚ç‚¹ï¼ˆé˜²æ­¢æ®‹ç•™ï¼‰
	if players_container:
		for child in players_container.get_children():
			child.queue_free()


## æ·»åŠ ç©å®¶ä¿¡æ¯é¡¹
func _add_player_info(peer_id: int, player: Node) -> void:
	if player_info_items.has(peer_id):
		return
	
	var item = _create_player_info_item(peer_id, player)
	players_container.add_child(item)
	player_info_items[peer_id] = item


## åˆ›å»ºç©å®¶ä¿¡æ¯é¡¹
func _create_player_info_item(peer_id: int, player: Node) -> Control:
	var item = PanelContainer.new()
	item.name = "PlayerInfo_%d" % peer_id
	item.custom_minimum_size = Vector2(280, 90)  # å¢åŠ é«˜åº¦ä»¥å®¹çº³é’¥åŒ™ä¿¡æ¯
	
	# åˆ›å»ºæ ·å¼
	var style = StyleBoxFlat.new()
	style.bg_color = Color(0.15, 0.15, 0.2, 0.85)
	style.corner_radius_top_left = 8
	style.corner_radius_top_right = 8
	style.corner_radius_bottom_left = 8
	style.corner_radius_bottom_right = 8
	style.border_width_left = 2
	style.border_width_right = 2
	style.border_width_top = 2
	style.border_width_bottom = 2
	style.border_color = player.get_class_color()
	item.add_theme_stylebox_override("panel", style)
	
	# ä¸»å®¹å™¨
	var margin = MarginContainer.new()
	margin.name = "MarginContainer"
	margin.add_theme_constant_override("margin_left", 10)
	margin.add_theme_constant_override("margin_right", 10)
	margin.add_theme_constant_override("margin_top", 5)
	margin.add_theme_constant_override("margin_bottom", 5)
	item.add_child(margin)
	
	var hbox = HBoxContainer.new()
	hbox.name = "HBoxContainer"
	hbox.add_theme_constant_override("separation", 10)
	margin.add_child(hbox)
	
	# ç©å®¶å›¾æ ‡ï¼ˆé¢œè‰²æ–¹å—ä»£è¡¨ skinï¼‰
	var icon = ColorRect.new()
	icon.name = "Icon"
	icon.custom_minimum_size = Vector2(50, 50)
	icon.color = player.get_class_color()
	hbox.add_child(icon)
	
	# ä¿¡æ¯å®¹å™¨
	var vbox = VBoxContainer.new()
	vbox.name = "VBoxContainer"
	vbox.size_flags_horizontal = Control.SIZE_EXPAND_FILL
	vbox.add_theme_constant_override("separation", 2)
	hbox.add_child(vbox)
	
	# ç©å®¶åç§°
	var name_label = Label.new()
	name_label.name = "NameLabel"
	name_label.text = player.display_name if "display_name" in player else "Player %d" % peer_id
	name_label.add_theme_font_size_override("font_size", 18)
	name_label.add_theme_color_override("font_color", Color.WHITE)
	
	# æ ‡è®°æœ¬åœ°ç©å®¶ï¼ˆä½¿ç”¨ NetworkManager.get_peer_id() ç¡®ä¿å‡†ç¡®ï¼‰
	var local_peer_id = NetworkManager.get_peer_id()
	if peer_id == local_peer_id:
		name_label.text += " (ä½ )"
		name_label.add_theme_color_override("font_color", Color(0.4, 1.0, 0.4))
	
	vbox.add_child(name_label)
	
	# HP æ¡
	var hp_container = HBoxContainer.new()
	hp_container.name = "HBoxContainer"
	hp_container.add_theme_constant_override("separation", 5)
	vbox.add_child(hp_container)
	
	var hp_label = Label.new()
	hp_label.name = "HPLabel"
	hp_label.text = "HP:"
	hp_label.add_theme_font_size_override("font_size", 14)
	hp_container.add_child(hp_label)
	
	var hp_bar = ProgressBar.new()
	hp_bar.name = "HPBar"
	hp_bar.custom_minimum_size = Vector2(150, 20)
	hp_bar.size_flags_horizontal = Control.SIZE_EXPAND_FILL
	hp_bar.max_value = player.max_hp if "max_hp" in player else 100
	hp_bar.value = player.now_hp if "now_hp" in player else 100
	hp_bar.show_percentage = false
	
	# HPæ¡æ ·å¼
	var bg_style = StyleBoxFlat.new()
	bg_style.bg_color = Color(0.2, 0.2, 0.2, 0.8)
	bg_style.corner_radius_top_left = 4
	bg_style.corner_radius_top_right = 4
	bg_style.corner_radius_bottom_left = 4
	bg_style.corner_radius_bottom_right = 4
	hp_bar.add_theme_stylebox_override("background", bg_style)
	
	var fill_style = StyleBoxFlat.new()
	fill_style.bg_color = Color(0.8, 0.2, 0.2, 1.0)
	fill_style.corner_radius_top_left = 4
	fill_style.corner_radius_top_right = 4
	fill_style.corner_radius_bottom_left = 4
	fill_style.corner_radius_bottom_right = 4
	hp_bar.add_theme_stylebox_override("fill", fill_style)
	
	hp_container.add_child(hp_bar)
	
	# HP æ•°å€¼
	var hp_value = Label.new()
	hp_value.name = "HPValue"
	hp_value.text = "%d/%d" % [hp_bar.value, hp_bar.max_value]
	hp_value.add_theme_font_size_override("font_size", 12)
	hp_value.custom_minimum_size = Vector2(60, 0)
	hp_value.horizontal_alignment = HORIZONTAL_ALIGNMENT_RIGHT
	hp_container.add_child(hp_value)
	
	# é’¥åŒ™ä¿¡æ¯å®¹å™¨
	var keys_container = HBoxContainer.new()
	keys_container.name = "KeysContainer"
	keys_container.add_theme_constant_override("separation", 15)
	vbox.add_child(keys_container)
	
	# æ™®é€šé’¥åŒ™ï¼ˆGoldï¼‰
	var gold_container = HBoxContainer.new()
	gold_container.name = "GoldContainer"
	gold_container.add_theme_constant_override("separation", 3)
	keys_container.add_child(gold_container)
	
	var gold_icon = Label.new()
	gold_icon.text = "ğŸ”‘"
	gold_icon.add_theme_font_size_override("font_size", 14)
	gold_container.add_child(gold_icon)
	
	var gold_label = Label.new()
	gold_label.name = "GoldLabel"
	gold_label.text = "%d" % (player.gold if "gold" in player else 0)
	gold_label.add_theme_font_size_override("font_size", 14)
	gold_label.add_theme_color_override("font_color", Color(1.0, 0.85, 0.2))  # é‡‘è‰²
	gold_label.custom_minimum_size = Vector2(30, 0)
	gold_container.add_child(gold_label)
	
	# å¤§å¸ˆé’¥åŒ™ï¼ˆMaster Keyï¼‰
	var master_container = HBoxContainer.new()
	master_container.name = "MasterContainer"
	master_container.add_theme_constant_override("separation", 3)
	keys_container.add_child(master_container)
	
	var master_icon = Label.new()
	master_icon.text = "ğŸ—ï¸"
	master_icon.add_theme_font_size_override("font_size", 14)
	master_container.add_child(master_icon)
	
	var master_label = Label.new()
	master_label.name = "MasterKeyLabel"
	master_label.text = "%d" % (player.master_key if "master_key" in player else 0)
	master_label.add_theme_font_size_override("font_size", 14)
	master_label.add_theme_color_override("font_color", Color(0.6, 0.8, 1.0))  # è“è‰²
	master_label.custom_minimum_size = Vector2(30, 0)
	master_container.add_child(master_label)
	
	return item


## æ›´æ–°æ‰€æœ‰ç©å®¶ä¿¡æ¯
func _update_all_players() -> void:
	# æ›´æ–°è°ƒè¯•æ ‡ç­¾
	_update_debug_label()
	
	# æ£€æŸ¥æ˜¯å¦æœ‰æ–°ç©å®¶åŠ å…¥ï¼ˆè·³è¿‡æœåŠ¡å™¨ peer_id=1 å’Œæ— æ•ˆçš„ peer_idï¼‰
	for peer_id in NetworkPlayerManager.players.keys():
		if peer_id <= 1:
			continue
		if not player_info_items.has(peer_id):
			var player = NetworkPlayerManager.players[peer_id]
			if player and is_instance_valid(player):
				_add_player_info(peer_id, player)
	
	# æ£€æŸ¥æ˜¯å¦æœ‰ç©å®¶ç¦»å¼€
	var to_remove: Array = []
	for peer_id in player_info_items.keys():
		if not NetworkPlayerManager.players.has(peer_id) or not is_instance_valid(NetworkPlayerManager.players[peer_id]):
			to_remove.append(peer_id)
	
	for peer_id in to_remove:
		_remove_player_info(peer_id)
	
	# æ›´æ–°æ¯ä¸ªç©å®¶çš„ä¿¡æ¯
	for peer_id in player_info_items.keys():
		_update_player_info(peer_id)


## æ›´æ–°å•ä¸ªç©å®¶ä¿¡æ¯
func _update_player_info(peer_id: int) -> void:
	if not NetworkPlayerManager.players.has(peer_id):
		return
	var player = NetworkPlayerManager.players[peer_id]
	if not player or not is_instance_valid(player):
		return
	
	var item = player_info_items.get(peer_id)
	if not item or not is_instance_valid(item):
		return
	
	var local_peer_id = NetworkManager.get_peer_id()
	var player_role = player.get("player_role_id")
	var is_betrayed_impostor = NetworkPlayerManager.impostor_betrayed and peer_id == NetworkPlayerManager.impostor_peer_id
	
	# æ›´æ–°åå­—æ ‡ç­¾
	var name_label = item.get_node_or_null("MarginContainer/HBoxContainer/VBoxContainer/NameLabel")
	if name_label and "display_name" in player:
		var new_name = player.display_name if player.display_name != "" else "Player %d" % peer_id
		
		# æ·»åŠ è§’è‰²æ ‡è®°
		if is_betrayed_impostor:
			new_name = "ğŸ”ª " + new_name + " [å›å˜è€…]"
		elif player_role == NetworkPlayerManager.ROLE_BOSS:
			new_name = "ğŸ‘¹ " + new_name + " [BOSS]"
		
		if peer_id == local_peer_id:
			new_name += " (ä½ )"
		
		if name_label.text != new_name:
			name_label.text = new_name
		
		# æ›´æ–°é¢œè‰²
		if is_betrayed_impostor:
			name_label.add_theme_color_override("font_color", Color(1.0, 0.5, 0.0))  # æ©™è‰²
		elif player_role == NetworkPlayerManager.ROLE_BOSS:
			name_label.add_theme_color_override("font_color", Color(1.0, 0.3, 0.3))  # çº¢è‰²
		elif peer_id == local_peer_id:
			name_label.add_theme_color_override("font_color", Color(0.4, 1.0, 0.4))  # ç»¿è‰²
		else:
			name_label.add_theme_color_override("font_color", Color.WHITE)
	
	# æ›´æ–°å›¾æ ‡é¢œè‰²ï¼ˆskin å¯èƒ½åœ¨æ¸¸æˆå¼€å§‹æ—¶æ›´æ–°ï¼‰
	var icon = item.get_node_or_null("MarginContainer/HBoxContainer/Icon")
	if icon:
		icon.color = player.get_class_color()
	
	# æ›´æ–°è¾¹æ¡†é¢œè‰²
	var style = item.get_theme_stylebox("panel") as StyleBoxFlat
	if style:
		if is_betrayed_impostor:
			style.border_color = Color(1.0, 0.5, 0.0)  # æ©™è‰²è¾¹æ¡†
		elif player_role == NetworkPlayerManager.ROLE_BOSS:
			style.border_color = Color(1.0, 0.3, 0.3)  # çº¢è‰²è¾¹æ¡†
		else:
			style.border_color = icon.color if icon else player.get_class_color()
	
	# æ›´æ–° HP
	var hp_bar = item.get_node_or_null("MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/HPBar")
	var hp_value = item.get_node_or_null("MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/HPValue")
	
	if hp_bar and "now_hp" in player and "max_hp" in player:
		hp_bar.max_value = player.max_hp
		hp_bar.value = max(0, player.now_hp)
		
		# æ ¹æ®è¡€é‡ç™¾åˆ†æ¯”æ”¹å˜é¢œè‰²
		var hp_percent = float(player.now_hp) / float(player.max_hp) if player.max_hp > 0 else 0
		var fill_style = hp_bar.get_theme_stylebox("fill") as StyleBoxFlat
		if fill_style:
			if hp_percent > 0.5:
				fill_style.bg_color = Color(0.3, 0.8, 0.3)  # ç»¿
			elif hp_percent > 0.25:
				fill_style.bg_color = Color(0.9, 0.7, 0.2)  # é»„
			else:
				fill_style.bg_color = Color(0.8, 0.2, 0.2)  # çº¢
	
	if hp_value and "now_hp" in player and "max_hp" in player:
		hp_value.text = "%d/%d" % [max(0, player.now_hp), player.max_hp]
	
	# æ›´æ–°é’¥åŒ™æ•°é‡
	var gold_label = item.get_node_or_null("MarginContainer/HBoxContainer/VBoxContainer/KeysContainer/GoldContainer/GoldLabel")
	if gold_label and "gold" in player:
		gold_label.text = "%d" % player.gold
	
	var master_key_label = item.get_node_or_null("MarginContainer/HBoxContainer/VBoxContainer/KeysContainer/MasterContainer/MasterKeyLabel")
	if master_key_label and "master_key" in player:
		master_key_label.text = "%d" % player.master_key


## ç§»é™¤ç©å®¶ä¿¡æ¯é¡¹
func _remove_player_info(peer_id: int) -> void:
	if not player_info_items.has(peer_id):
		return
	
	var item = player_info_items[peer_id]
	if item and is_instance_valid(item):
		item.queue_free()
	player_info_items.erase(peer_id)


## æ›´æ–°æœåŠ¡å™¨ä¿¡æ¯
func _update_server_info() -> void:
	if not server_info_label:
		return
	
	if NetworkManager.is_server():
		server_info_label.text = "æœåŠ¡å™¨ | æŒ‰ Tab åˆ‡æ¢è§†è§’"
	else:
		server_info_label.text = "å®¢æˆ·ç«¯ | Peer ID: %d" % NetworkManager.get_peer_id()


## ==================== è§’è‰²æç¤ºç³»ç»Ÿ ====================

## åˆ›å»ºè§’è‰²æç¤ºé¢æ¿
func _create_role_hint_panel() -> void:
	_role_hint_panel = PanelContainer.new()
	_role_hint_panel.name = "RoleHintPanel"
	
	# ä½ç½®ï¼šå±å¹•ä¸Šæ–¹ä¸­å¤®
	_role_hint_panel.set_anchors_preset(Control.PRESET_CENTER_TOP)
	_role_hint_panel.position = Vector2(-150, 20)
	_role_hint_panel.custom_minimum_size = Vector2(300, 60)
	
	# æ ·å¼
	var style = StyleBoxFlat.new()
	style.bg_color = Color(0.1, 0.1, 0.15, 0.9)
	style.corner_radius_top_left = 10
	style.corner_radius_top_right = 10
	style.corner_radius_bottom_left = 10
	style.corner_radius_bottom_right = 10
	style.border_width_left = 3
	style.border_width_right = 3
	style.border_width_top = 3
	style.border_width_bottom = 3
	style.border_color = Color(0.5, 0.5, 0.5)
	_role_hint_panel.add_theme_stylebox_override("panel", style)
	
	# å†…å®¹å®¹å™¨
	var margin = MarginContainer.new()
	margin.add_theme_constant_override("margin_left", 15)
	margin.add_theme_constant_override("margin_right", 15)
	margin.add_theme_constant_override("margin_top", 10)
	margin.add_theme_constant_override("margin_bottom", 10)
	_role_hint_panel.add_child(margin)
	
	var vbox = VBoxContainer.new()
	vbox.name = "VBoxContainer"
	vbox.add_theme_constant_override("separation", 5)
	margin.add_child(vbox)
	
	# è§’è‰²æ ‡ç­¾
	var role_label = Label.new()
	role_label.name = "RoleLabel"
	role_label.horizontal_alignment = HORIZONTAL_ALIGNMENT_CENTER
	role_label.add_theme_font_size_override("font_size", 20)
	vbox.add_child(role_label)
	
	# æç¤ºæ ‡ç­¾
	var hint_label = Label.new()
	hint_label.name = "HintLabel"
	hint_label.horizontal_alignment = HORIZONTAL_ALIGNMENT_CENTER
	hint_label.add_theme_font_size_override("font_size", 14)
	hint_label.add_theme_color_override("font_color", Color(0.7, 0.7, 0.7))
	vbox.add_child(hint_label)
	
	add_child(_role_hint_panel)
	_role_hint_panel.visible = false


## æ›´æ–°è§’è‰²æç¤º
func _update_role_hint() -> void:
	if not _role_hint_panel:
		return
	
	var local_player = NetworkPlayerManager.local_player
	if not local_player or not is_instance_valid(local_player):
		_role_hint_panel.visible = false
		return
	
	var role_id = local_player.player_role_id
	var role_label = _role_hint_panel.get_node_or_null("MarginContainer/VBoxContainer/RoleLabel")
	var hint_label = _role_hint_panel.get_node_or_null("MarginContainer/VBoxContainer/HintLabel")
	var style = _role_hint_panel.get_theme_stylebox("panel") as StyleBoxFlat
	
	if not role_label or not hint_label:
		return
	
	match role_id:
		NetworkPlayerManager.ROLE_BOSS:
			role_label.text = "ğŸ‘¹ ä½ æ˜¯ BOSS"
			role_label.add_theme_color_override("font_color", Color(1.0, 0.3, 0.3))
			hint_label.text = "æ¶ˆç­æ‰€æœ‰ç©å®¶ï¼"
			if style:
				style.border_color = Color(1.0, 0.3, 0.3)
			_role_hint_panel.visible = true
		
		NetworkPlayerManager.ROLE_IMPOSTOR:
			if NetworkPlayerManager.impostor_betrayed:
				role_label.text = "ğŸ”ª ä½ æ˜¯å›å˜è€…"
				role_label.add_theme_color_override("font_color", Color(1.0, 0.5, 0.0))
				hint_label.text = "æ¶ˆç­æ‰€æœ‰ç©å®¶ï¼"
				if style:
					style.border_color = Color(1.0, 0.5, 0.0)
			else:
				role_label.text = "ğŸ­ ä½ æ˜¯å†…é¬¼"
				role_label.add_theme_color_override("font_color", Color(1.0, 0.5, 0.0))
				hint_label.text = "æŒ‰ B é”®å›å˜ï¼ˆä¸å¯æ’¤é”€ï¼‰"
				if style:
					style.border_color = Color(1.0, 0.5, 0.0)
			_role_hint_panel.visible = true
		
		NetworkPlayerManager.ROLE_PLAYER:
			role_label.text = "ğŸ›¡ï¸ ä½ æ˜¯ç©å®¶"
			role_label.add_theme_color_override("font_color", Color(0.4, 0.8, 1.0))
			hint_label.text = "å‡»è´¥ BOSSï¼Œå°å¿ƒå†…é¬¼ï¼"
			if style:
				style.border_color = Color(0.4, 0.8, 1.0)
			_role_hint_panel.visible = true
		
		_:
			_role_hint_panel.visible = false


## å›å˜äº‹ä»¶å¤„ç†
func _on_impostor_betrayed(impostor_peer_id: int) -> void:
	print("[GameUIOnline] æ”¶åˆ°å›å˜é€šçŸ¥: peer_id=%d" % impostor_peer_id)
	
	# æ›´æ–°è§’è‰²æç¤º
	_update_role_hint()
	
	# æ›´æ–°å›å˜æç¤ºï¼ˆéšè—ï¼‰
	_update_betrayal_hint()
	
	# æ›´æ–°ç©å®¶åˆ—è¡¨ä¸­çš„ Impostor æ˜¾ç¤º
	_update_player_info(impostor_peer_id)


## åˆ›å»ºå›å˜æç¤ºæ¡†ï¼ˆå±å¹•ä¸‹æ–¹å±…ä¸­ï¼Œåªæœ‰ Impostor å¯è§ï¼‰
func _create_betrayal_hint_panel() -> void:
	_betrayal_hint_panel = PanelContainer.new()
	_betrayal_hint_panel.name = "BetrayalHintPanel"
	
	# æ ·å¼ - é†’ç›®çš„æ©™è‰²è¾¹æ¡†
	var style = StyleBoxFlat.new()
	style.bg_color = Color(0.15, 0.1, 0.05, 0.95)
	style.corner_radius_top_left = 12
	style.corner_radius_top_right = 12
	style.corner_radius_bottom_left = 12
	style.corner_radius_bottom_right = 12
	style.border_width_left = 4
	style.border_width_right = 4
	style.border_width_top = 4
	style.border_width_bottom = 4
	style.border_color = Color(1.0, 0.5, 0.0)  # æ©™è‰²è¾¹æ¡†
	style.shadow_color = Color(1.0, 0.5, 0.0, 0.3)
	style.shadow_size = 8
	_betrayal_hint_panel.add_theme_stylebox_override("panel", style)
	
	# å†…å®¹å®¹å™¨
	var margin = MarginContainer.new()
	margin.add_theme_constant_override("margin_left", 30)
	margin.add_theme_constant_override("margin_right", 30)
	margin.add_theme_constant_override("margin_top", 15)
	margin.add_theme_constant_override("margin_bottom", 15)
	_betrayal_hint_panel.add_child(margin)
	
	var vbox = VBoxContainer.new()
	vbox.name = "VBoxContainer"
	vbox.add_theme_constant_override("separation", 8)
	margin.add_child(vbox)
	
	# æ ‡é¢˜
	var title_label = Label.new()
	title_label.name = "TitleLabel"
	title_label.text = "ğŸ­ ä½ æ˜¯å†…é¬¼"
	title_label.horizontal_alignment = HORIZONTAL_ALIGNMENT_CENTER
	title_label.add_theme_font_size_override("font_size", 24)
	title_label.add_theme_color_override("font_color", Color(1.0, 0.6, 0.2))
	vbox.add_child(title_label)
	
	# æŒ‰é”®æç¤º
	var key_hint = Label.new()
	key_hint.name = "KeyHintLabel"
	key_hint.text = "æŒ‰ [ B ] é”®å›å˜"
	key_hint.horizontal_alignment = HORIZONTAL_ALIGNMENT_CENTER
	key_hint.add_theme_font_size_override("font_size", 28)
	key_hint.add_theme_color_override("font_color", Color(1.0, 1.0, 1.0))
	vbox.add_child(key_hint)
	
	# è­¦å‘Šæç¤º
	var warning_label = Label.new()
	warning_label.name = "WarningLabel"
	warning_label.text = "âš  å›å˜åä¸å¯æ’¤é”€ï¼Œæ‰€æœ‰äººéƒ½ä¼šçŸ¥é“ä½ æ˜¯å›å˜è€…"
	warning_label.horizontal_alignment = HORIZONTAL_ALIGNMENT_CENTER
	warning_label.add_theme_font_size_override("font_size", 14)
	warning_label.add_theme_color_override("font_color", Color(0.8, 0.6, 0.4))
	vbox.add_child(warning_label)
	
	add_child(_betrayal_hint_panel)
	_betrayal_hint_panel.visible = false
	
	# å»¶è¿Ÿè®¾ç½®ä½ç½®ï¼ˆç­‰å¾…å¸ƒå±€å®Œæˆï¼‰
	call_deferred("_position_betrayal_hint")


## è®¾ç½®å›å˜æç¤ºæ¡†ä½ç½®ï¼ˆå±å¹•ä¸‹æ–¹å±…ä¸­ï¼‰
func _position_betrayal_hint() -> void:
	if not _betrayal_hint_panel:
		return
	
	var viewport_size = get_viewport().get_visible_rect().size
	var panel_size = _betrayal_hint_panel.size
	
	# å¦‚æœè¿˜æ²¡æœ‰è®¡ç®—å‡ºå¤§å°ï¼Œä½¿ç”¨é¢„ä¼°å€¼
	if panel_size.x <= 0:
		panel_size = Vector2(400, 120)
	
	_betrayal_hint_panel.position = Vector2(
		(viewport_size.x - panel_size.x) / 2,
		viewport_size.y - panel_size.y - 80  # è·ç¦»åº•éƒ¨ 80 åƒç´ 
	)


## æ›´æ–°å›å˜æç¤ºæ¡†æ˜¾ç¤ºçŠ¶æ€
func _update_betrayal_hint() -> void:
	if not _betrayal_hint_panel:
		return
	
	# åªæœ‰ Impostor ä¸”æœªå›å˜æ—¶æ‰æ˜¾ç¤º
	var should_show = NetworkPlayerManager.can_betray()
	
	if _betrayal_hint_panel.visible != should_show:
		_betrayal_hint_panel.visible = should_show
		if should_show:
			# é‡æ–°å®šä½
			call_deferred("_position_betrayal_hint")


## ==================== è°ƒè¯•åŠŸèƒ½ ====================

## åˆ›å»ºè°ƒè¯•æ ‡ç­¾
func _create_debug_label() -> void:
	_debug_label = Label.new()
	_debug_label.name = "DebugLabel"
	_debug_label.position = Vector2(20, 450)
	_debug_label.add_theme_font_size_override("font_size", 16)
	_debug_label.add_theme_color_override("font_color", Color(1, 1, 0))
	_debug_label.add_theme_color_override("font_shadow_color", Color(0, 0, 0, 0.8))
	_debug_label.add_theme_constant_override("shadow_offset_x", 1)
	_debug_label.add_theme_constant_override("shadow_offset_y", 1)
	add_child(_debug_label)


## æ›´æ–°è°ƒè¯•æ ‡ç­¾
func _update_debug_label() -> void:
	if not _debug_label:
		return
	
	var local_peer_id = NetworkManager.get_peer_id()
	var lines: Array = []
	lines.append("=== è°ƒè¯•: ç©å®¶åå­—åˆ—è¡¨ ===")
	lines.append("æœ¬åœ° peer_id: %d" % local_peer_id)
	lines.append("players.keys(): %s" % str(NetworkPlayerManager.players.keys()))
	lines.append("player_info_items.keys(): %s" % str(player_info_items.keys()))
	lines.append("---")
	
	for peer_id in NetworkPlayerManager.players.keys():
		var player = NetworkPlayerManager.players[peer_id]
		if player and is_instance_valid(player):
			var name = player.display_name if "display_name" in player else "???"
			var is_local = " (æœ¬åœ°)" if peer_id == local_peer_id else ""
			var is_skipped = " [è·³è¿‡]" if peer_id <= 1 else ""
			lines.append("peer_%d: %s%s%s" % [peer_id, name, is_local, is_skipped])
		else:
			lines.append("peer_%d: [æ— æ•ˆ]" % peer_id)
	
	_debug_label.text = "\n".join(lines)
